# farms_network

./: .buildinfo  .gitignore  .gitlab-ci.yml  404.html  CNAME  LICENSE  README.md  README.org  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
_sources/: index.rst.txt
core/: index.html  neuron.html  node.html  options.html
farms_network/: Fitzhugh_Nagumo.pxd  Fitzhugh_Nagumo.pyx  __init__.py  fitzhugh_nagumo.pxd  fitzhugh_nagumo.pyx  hh_daun_motorneuron.pxd  hh_daun_motorneuron.pyx  hopf_oscillator.pxd  hopf_oscillator.pyx  integrate_and_fire.py  integrators.pxd  integrators.pyx  leaky_integrator.pxd  leaky_integrator.pyx  lif_danner.pxd  lif_danner.pyx  lif_danner_nap.pxd  lif_danner_nap.pyx  lif_daun_interneuron.pxd  lif_daun_interneuron.pyx  matsuoka_neuron.pxd  matsuoka_neuron.pyx  morphed_oscillator.pxd  morphed_oscillator.pyx  morris_lecar.pxd  morris_lecar.pyx  network_generator.pxd  network_generator.pyx  networkx_model.py  neural_system.py  neuron.pxd  neuron.pyx  neuron_factory.py  oscillator.pxd  oscillator.pyx  py_hh_daun_motorneuron.py  py_lif_daun_interneuron.py  relu.pxd  relu.pyx  sensory_neuron.pxd  (+1 more)
farms_network.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
farms_network_generator/: __init__.py  constant_and_inhibit.py  dae_generator.py  factory_neuron.py  hh_daun_motorneuron.pxd  hh_daun_motorneuron.py  hh_daun_motorneuron.pyx  leaky_integrator.pxd  leaky_integrator.pyx  lif_danner.pxd  lif_danner.pyx  lif_danner_nap.pxd  lif_danner_nap.py  lif_danner_nap.pyx  lif_daun_interneuron.pxd  lif_daun_interneuron.pyx  network_generator.pxd  network_generator.py  network_generator.pyx  networkx_model.py  neural_system.py  neuron.pxd  neuron.py  neuron.pyx  neuron_factory.py  oscillator.pyx  py_lif_danner.py  py_network_generator.py  py_neuron.py  sensory_neuron.pxd  sensory_neuron.py  sensory_neuron.pyx
introduction/: index.html  installation.html  overview.html
models/: index.html  li_danner.html
networkGenerator/: cpg_danner_network.py  cpg_daun_network.py  cpg_dauns_motorneuron_test.py  cpg_dauns_network.py  cpg_four_neuron_if.py  (+11 more)
(+167 files in other folders)
